2001-10-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-dtree.el (w3m-dtree-indent-strings, w3m-dtree-stop-strings):
	Throw out the "Japanese Character" for non-mule's environments.

2001-10-21  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-muchy.el (shimbun-get-headers): Bug fixed.
	Add update status, license fee and ranking description, to
	SUBJECT.
	(shimbun-muchy-get-headers): New function.
	(shimbun-get-headers): Use `shimbun-muchy-get-headers'.
	Also search `http://muchy.com/whatsold.html".
	(shimbun-muchy-get-headers): Add new arg HEADERS.
	(shimbun-get-headers): Bug fixed.
	Do not delete working regions.
	(shimbun-muchy-get-headers): Remove unnecessary temporary variable
	COUNT.
	(shimbun-get-headers): Ditto.
	(shimbun-muchy-get-headers): Remove unnecessary `mapcar'.

2001-10-20  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-muchy.el: New file.

	* shimbun/sb-ibm-dev.el: New file.
	(shimbun-make-contents): Move a reference to a PDF file to the end
	of buffer.
	Remove font class attribute from a subject string.
	(shimbun-make-contents): Declare a local variable SUBJECT.

2001-10-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* aclocal.m4 (AC_ADD_LOAD_PATH): When `yes' or null string is
	passed as an argument, call `w3mhack-load-path' to search places
	of required modules automatically.

	* w3mhack.el (w3mhack-load-path): New function.

2001-10-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (w3m-create-image): Call `w3m-fix-gif' if
	`w3m-should-convert-interlaced-gifs' is non-nil.
	(w3m-fix-gif): Renamed from `w3m-unoptimize-animated-gif'; convert
	an interlaced gif to be non-interlaced as well as unoptimization.
	(w3m-cache-fixed-gif-images-max-length): Renamed from
	`w3m-cache-unoptimized-gif-images-max-length'.
	(w3m-cache-fixed-gif-images): Renamed from
	`w3m-cache-unoptimized-gif-images'.
	(w3m-should-convert-interlaced-gifs): New variable.

2001-10-16  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
